[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-gvm"
version = "27.0.1"
description = "Library to communicate with remote servers over GMP or OSP"
authors = [{ name = "Greenbone AG", email = "info@greenbone.net" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["paramiko>=2.7.1", "lxml>=4.5.0", "httpx[http2]>=0.28.1,<0.29"]

[project.urls]
Homepage = "https://github.com/greenbone/python-gvm/"
Repository = "https://github.com/greenbone/python-gvm/"
Documentation = "https://greenbone.github.io/python-gvm/"

[dependency-groups]
dev = [
    "coverage>=7.2",
    "sphinx>=5.3.0",
    "autohooks-plugin-ruff>=25.2.0",
    "autohooks-plugin-mypy>=22.7.0",
    "pontos>=26.4.0",
    "furo>=2022.6.21",
    "lxml-stubs>=0.5.1,<0.6",
    "types-paramiko>=3.4.0.20240205,<5.0.0.0",
    "git-cliff>=2.8.0,<3",
    "myst-parser>=4.0.0,<5 ; python_full_version >= '3.10' and python_full_version < '4'",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.wheel]
packages = ["gvm"]

[tool.hatch.build.targets.sdist]
include = ["docs", "tests", "gvm", "uv.lock"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I", "PLE", "PLW", "PTH", "C4", "A", "N", "RUF", "UP"]

[tool.autohooks]
mode = "uv"
pre-commit = ['autohooks.plugins.ruff.format', "autohooks.plugins.ruff.check"]

[tool.coverage.run]
branch = true
omit = ["tests/*", "*/__init__.py"]
source = ["gvm"]

[tool.pontos.version]
version-module-file = "gvm/__version__.py"

[tool.mypy]
files = "gvm"
ignore_missing_imports = true
explicit_package_bases = true
allow_redefinition = true

[tool.git-cliff.changelog]
# template for the changelog header
header = """
# Changelog\n
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
"""
# template for the changelog body
# https://keats.github.io/tera/docs/#introduction
body = """
{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% if version -%}
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else -%}
    ## [Unreleased]
{% endif -%}

{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | upper_first }}
    {% for commit in commits %}
        - {{ commit.message | split(pat="\n") | first | upper_first | trim }}\
            {% if commit.remote.username %} by [@{{ commit.remote.username }}](https://github.com/{{ commit.remote.username }}){%- endif -%}
            {% if commit.remote.pr_number %} in \
            [#{{ commit.remote.pr_number }}]({{ self::remote_url() }}/pull/{{ commit.remote.pr_number }}) \
            {% elif commit.id %} in \
            [{{ commit.id | truncate(length=7, end="") }}]({{ self::remote_url() }}/commit/{{ commit.id }})\
            {%- endif -%}
    {% endfor %}
{% endfor -%}
"""
# template for the changelog footer
footer = """
{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% for release in releases %}
    {% if release.version -%}
        {% if release.previous.version -%}
            [{{ release.version | trim_start_matches(pat="v") }}]: \
                {{ self::remote_url() }}/compare/{{ release.previous.version }}..{{ release.version }}
        {% endif -%}
    {% else -%}
        [unreleased]: {{ self::remote_url() }}/compare/{{ release.previous.version }}..HEAD
    {% endif -%}
{%- endfor -%}
"""
# remove the leading and trailing whitespace from the templates
trim = true

[tool.git-cliff.git]
# parse the commits based on https://www.conventionalcommits.org
conventional_commits = true
# filter out the commits that are not following the conventional commits format
filter_unconventional = false
# process each line of a commit as an individual commit
split_commits = false
# regex for preprocessing the commit messages
commit_preprocessors = [
    # remove issue numbers from commits
    { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "" },
]
# regex for parsing and grouping commits
commit_parsers = [
    { message = "^[a|A]dd", group = "<!-- 1 -->:sparkles: Added" },
    { message = "^[c|C]hange", group = "<!-- 2 -->:construction_worker: Changed" },
    { message = "^[f|F]ix", group = "<!-- 3 -->:bug: Bug Fixes" },
    { message = "^[r|R]emove", group = "<!-- 4 -->:fire: Removed" },
    { message = "^[d|D]rop", group = "<!-- 4 -->:fire: Removed" },
    { message = "^[d|D]oc", group = "<!-- 5 -->:books: Documentation" },
    { message = "^[t|T]est", group = "<!-- 6 -->:white_check_mark: Testing" },
    { message = "^[c|C]hore", group = "<!-- 7 -->:wrench: Miscellaneous" },
    { message = "^[c|C]i", group = "<!-- 7 -->:wrench: Miscellaneous" },
    { message = "^[m|M]isc", group = "<!-- 7 -->:wrench: Miscellaneous" },
    { message = "^[d|D]eps", group = "<!-- 8 -->:ship: Dependencies" },
]
# filter out the commits that are not matched by commit parsers
filter_commits = true
# sort the tags topologically
topo_order = false
# sort the commits inside sections by oldest/newest order
sort_commits = "oldest"

[tool.poetry]
version = "27.0.1.dev1"
